--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swproxy-mod",
-  "version": "0.0.0-beta.1",
+  "version": "0.0.1",
   "description": "base package to write mods for the swproxy library",
   "homepage": "http://www.alexanderbartels.com/swproxy-www",
   "author": {
@@ -12,7 +12,10 @@
   ],
   "main": "dist/index.js",
   "keywords": [
-    "swproxy", "serviceworker", "proxy"
+    "swproxy",
+    "swproxy-mod",
+    "serviceworker",
+    "proxy"
   ],
   "dependencies": {
   },
